--- a/index.html
+++ b/index.html
@@ -1,169 +1,186 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Audiowide|Gugi|Kirang+Haerang|Press+Start+2P|Share|Unica+One" rel="stylesheet">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Brighton Times</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>
-    <title>Document</title>
-</head>
+  </head>
+  <body>
 
-<body>
-    <header>
-        <div id="left-head">
-            <img src="http://aduff.org/Images/udacity.png" alt="logo">
-        </div>
-        <div id="right-head">
-            <h1>Adam Duff</h1>
-            <h3>Front-End Developer</h1>
-        </div>
+    <header class="header">
+      <div class="header__inner">
+        <img class="header__logo" src="images/city.png" alt="iconic view of a cityscape">
+        <h1 class="header__title">
+          The Brighton Times
+        </h1>
+      </div>
+      <div class="hamburger">
+        <i class="fas fa-bars"></i>
+      </div>
     </header>
 
-    <nav>
-        <ul class="menu-list">
-            <li class="menu-item">
-                <a href="#about-anchor">
-                    <button class="menu-button">About</button>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="#projects-anchor">
-                    <button class="menu-button">Projects</button>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="#contact-anchor">
-                    <button class="menu-button">Contact</button>
-                </a>
-            </li>
-        </ul>
-        <span id="hamburger">
-            <i class="fas fa-bars"></i>
-        </span>
+    <nav id="drawer" class="nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#">News</a></li>
+        <li class="nav__item"><a href="#">Events</a></li>
+        <li class="nav__item"><a href="#">Culture</a></li>
+        <li class="nav__item"><a href="#">Blog</a></li>
+      </ul>
     </nav>
 
-    <!-- **MAIN CONTENT STARTS HERE**  -->
-
-    <div id="contents">
-
-        <section id="about-section">
-            <img src="http://aduff.org/Images/aduff.jpg" id="profile" alt="profile picture">
-            <p id="about-anchor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at accumsan sapien. Sed dignissim, mi vitae ullamcorper
-                aliquam, tellus tortor facilisis sem, sit amet convallis ligula lacus vitae massa. Nulla eget metus iaculis,
-                volutpat urna vitae, ultricies sem. Duis commodo varius molestie. Pellentesque habitant morbi tristique senectus
-                et netus et malesuada fames ac turpis egestas. Donec posuere convallis eros, ut rutrum nisi cursus vel. Morbi
-                lacus nunc, dignissim sit amet tellus quis, efficitur aliquam enim. Interdum et malesuada fames ac ante ipsum
-                primis in faucibus. Curabitur varius eget diam et pellentesque. Fusce dictum feugiat efficitur.</p>
-
-            <p>Etiam sapien orci, feugiat ut maximus vitae, aliquet et turpis. Vivamus rhoncus sollicitudin lorem, eget gravida
-                lectus semper et. Fusce rhoncus felis nec ligula congue, ut ullamcorper diam laoreet. Nullam ut risus nec
-                lectus gravida bibendum sed nec ante. Vestibulum eu arcu quis sapien vehicula tempor. Vestibulum iaculis
-                ultricies metus id egestas. Maecenas aliquam vulputate ligula non venenatis.</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at accumsan sapien. Sed dignissim, mi vitae ullamcorper
-                aliquam, tellus tortor facilisis sem, sit amet convallis ligula lacus vitae massa. Nulla eget metus iaculis,
-                volutpat urna vitae, ultricies sem. Duis commodo varius molestie. Pellentesque habitant morbi tristique senectus
-                et netus et malesuada fames ac turpis egestas. Donec posuere convallis eros, ut rutrum nisi cursus vel. Morbi
-                lacus nunc, dignissim sit amet tellus quis, efficitur aliquam enim. Interdum et malesuada fames ac ante ipsum
-                primis in faucibus. Curabitur varius eget diam et pellentesque. Fusce dictum feugiat efficitur.</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at accumsan sapien. Sed dignissim, mi vitae ullamcorper
-                aliquam, tellus tortor facilisis sem, sit amet convallis ligula lacus vitae massa. Nulla eget metus iaculis,
-                volutpat urna vitae, ultricies sem. Duis commodo varius molestie. Pellentesque habitant morbi tristique senectus
-                et netus et malesuada fames ac turpis egestas. Donec posuere convallis eros, ut rutrum nisi cursus vel. Morbi
-                lacus nunc, dignissim sit amet tellus quis, efficitur aliquam enim. Interdum et malesuada fames ac ante ipsum
-                primis in faucibus. Curabitur varius eget diam et pellentesque. Fusce dictum feugiat efficitur.</p>
-        </section>
-        <div class="divider"></div>
-        <!-- **PROJECT SECTION**  -->
-
-        <h2 id="projects-anchor">Projects</h2>
-        <p>Below are a few projects I have completed:</p>
-        <section id="projects">
-            <div class="project-item" onclick="window.open('http://aduff.org/Projects/Patatap')">
-
-                <img src="http://aduff.org/Images/patatap.png" class="project-image" alt="Patatap">
-                <h4 class="project-text">PataTap</h4>
-            </div>
-            <div class="project-item" onclick="window.open('http://aduff.org/Projects/ColorGame/colorgame.html')">
-                <img src="http://aduff.org/Images/color-game.png" class="project-image" alt="Color Game">
-                <h4 class="project-text">Color Game</h4>
-            </div>
-            <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/KRKOdb/')">
-                <img src="http://aduff.org/Images/quote-gen.png" class="project-image" alt="Random Quote Generator">
-                <h4 class="project-text">Random Quote Generator</h4>
-            </div>
-            <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/vjNEwZ/')">
-                <img src="http://aduff.org/Images/twitch-stream.png" class="project-image" alt="Twitch Streamer">
-                <h4 class="project-text">Twitch Streamer Online Status</h4>
-            </div>
-            <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/dePEze/')">
-                <img src="http://aduff.org/Images/weather.png" class="project-image" alt="Weather App">
-                <h4 class="project-text">Weather App</h4>
-            </div>
-            <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/zjGjMx/')">
-                <img src="http://aduff.org/Images/wiki-search.png" class="project-image" alt="Wikipedia Search">
-                <h4 class="project-text">Wikipedia Search</h4>
-            </div>
-        </section>
-        <div class="divider"></div>
-
-        <!-- **CONTACT SECTION**  -->
-
-        <section id="contact">
-            <h2 id="contact-anchor">Contact Me</h2>
-            <form action="post">
-                <div class="form-section">
-                    <div class="label">
-                        <label for="username">Name:</label>
-                    </div>
-                    <div class="form-item">
-                        <input type="text" name="username" placeholder="Your Name">
-                    </div>
-                </div>
-                <div class="form-section">
-                    <div class="label">
-                        <label for="email">E-mail Address:</label>
-                    </div>
-                    <div class="form-item">
-                        <input type="email" placeholder="E-mail Address" name="email">
-                    </div>
-                </div>
-                <div class="form-section">
-                    <div class="label">
-                        <label for="message">Message</label>
-                    </div>
-                    <div class="form-item">
-                        <textarea placeholder="Message" name="message" rows="3" cols="3"></textarea>
-                    </div>
-                </div>
-                <input type="submit" id="submit-button">
-            </form>
+    <main>
+      <section class="content">
+        <section class="hero">
+          <article class="description">
+            <h2>Absolutely astonishing breaking news!</h2>
+            <p>Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</p>
+          </article>
         </section>
 
-        <footer>
-            <div id="copyright">
-                Copyright &copy; Adam Duff 2018.
-            </div>
-            <div id="social">
-                <a href="https://www.facebook.com/FikoReborn">
-                    <i class="fab fa-facebook-square"></i>
-                </a>
-                <a href="https://twitter.com/FikoReborn">
-                    <i class="fab fa-twitter-square"></i>
-                </a>
-                <a href="https://github.com/FikoReborn">
-                    <i class="fab fa-github-square"></i>
-                </a>
-            </div>
-        </footer>
+        <section class="news top-news">
+          <h2 class="news__title">Top news <a href="#" class="news__more">+ more</a></h2>
+          <ul>
+            <li class="top-news__item">
+              <a href="#">Gastropub distillery Marfa farm-to-table, Etsy Truffaut fingerstache.</a>
+            </li>
+            <li class="top-news__item">
+              <a href="#">Squid lomo Kickstarter art lomo Kickstarter art party cronut scenester.</a>
+            </li>
+            <li class="top-news__item">
+              <a href="#">Organic raw denim lomo Kickstarter art Vice keffiyeh four loko.</a>
+            </li>
+            <li class="top-news__item">
+              <a href="#">Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</a>
+            </li>
+          </ul>
+        </section>
 
-    </div>
+        <section class="scores">
+          <table class="scores__table">
+            <thead>
+              <tr>
+                <th>date</th>
+                <th>team</th>
+                <th colspan="2">score</th>
+                <th>team</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Friday</td>
+                <td>Bears</td>
+                <td>95</td>
+                <td class="winner">109</td>
+                <td class="winner">Cubs</td>
+              </tr>
+              <tr>
+                <td>Friday</td>
+                <td class="winner">Otters</td>
+                <td class="winner">3</td>
+                <td>1</td>
+                <td>Cubs</td>
+              </tr>
+              <tr>
+                <td>Saturday</td>
+                <td class="winner">Wolves</td>
+                <td class="winner">7</td>
+                <td>0</td>
+                <td>Panthers</td>
+              </tr>
+              <tr>
+                <td>Sunday</td>
+                <td>Hawks</td>
+                <td>11</td>
+                <td class="winner">12</td>
+                <td class="winner">Capons</td>
+              </tr>
+              <tr>
+                <td>Sunday</td>
+                <td class="winner">Stags</td>
+                <td class="winner">6</td>
+                <td>2</td>
+                <td>Foxes</td>
+              </tr>
+              
+            </tbody>
+          </table>
+        </section>
 
+        <section class="weather">
+          <span class="weather__location">Brighton, UK</span>
+          <span class="weather__desc">Sunny</span>
+          <span class="weather__today">
+          <img class="weather__today__image" src="images/weather.png" alt="icon of a partially sunny day"><span class="weather__today__temp">13</span><span class="weather__today__deg">&deg;C</span>
+          </span>
+          <ul class="weather__next">
+            <li class="weather__next__item">
+              <span>Mon</span>
+              <img class="weather__next__image" src="images/sunny.png" alt="icon of a sunny day">
+              <span>13 &deg;C</span>
+            </li><li class="weather__next__item">
+              <span>Tues</span>
+              <img class="weather__next__image" src="images/cloudy.png" alt="icon of a cloudy day">
+              <span>13 &deg;C</span>
+            </li><li class="weather__next__item">
+              <span>Wed</span>
+              <img class="weather__next__image" src="images/cloudy.png" alt="icon of a cloudy day">
+              <span>13 &deg;C</span>
+            </li><li class="weather__next__item">
+              <span>Thu</span>
+              <img class="weather__next__image" src="images/rain.png" alt="icon of a rainy day">
+              <span>13 &deg;C</span>
+            </li><li class="weather__next__item">
+              <span>Fri</span>
+              <img class="weather__next__image" src="images/sunny.png" alt="icon of a sunny day">
+              <span>13 &deg;C</span>
+            </li>
+          </ul>
+        </section>
 
-</body>
-
+        <section class="news recent-news">
+          <h2 class="news__title">Latest news <a href="#" class="news__more">+ more</a></h2>
+          <ul>
+            <li class="snippet">
+              <img class="snippet__thumbnail" src="images/dog.jpg" alt="picture of a girl with a large, stuffed dog toy">
+              <h3 class="snippet__title"><a href="#">Gastropub distillery Marfa farm-to-table</a></h3>
+              <p>Gastropub distillery Marfa farm-to-table, Etsy Truffaut fingerstache.
+              Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko. Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko.Vice keffiyeh four loko. Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko.Vice keffiyeh four loko. Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko.
+              </p>
+            </li>
+            <li class="snippet">
+              <img class="snippet__thumbnail" src="images/dog.jpg" alt="picture of a girl with a large, stuffed dog toy">
+              <h3 class="snippet__title"><a href="#">Organic raw keffiyeh four loko.</a></h3>
+              <p>Vice keffiyeh four loko. Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko.Vice keffiyeh four loko. Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice loko.
+              </p>
+            </li>
+            <li class="snippet">
+              <img class="snippet__thumbnail" src="images/dog.jpg" alt="picture of a girl with a large, stuffed dog toy">
+              <h3 class="snippet__title"><a href="#">Kickstarter art party cronut scenester.</a></h3>
+              <p>Gastropub distillery Marfa farm-to-table, Etsy Truffaut fingerstache.
+              Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko. Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko.Vice keffiyeh four loko.
+              </p>
+            </li>
+            <li class="snippet">
+              <img class="snippet__thumbnail" src="images/dog.jpg" alt="picture of a girl with a large, stuffed dog toy">
+              <h3 class="snippet__title"><a href="#">Squid lomo Kickstarter art party cronut </a></h3>
+              <p>Gastropub distillery Marfa farm-to-table, Etsy Truffaut fingerstache.
+              Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko. Squid lomo Kickstarter art party cronut scenester. Organic raw denim Vice keffiyeh four loko.Vice keffiyeh four loko.
+              </p>
+            </li>
+          </ul>
+        </section>
+      </section>
+      <footer>
+        <ul>
+          <li><a href="#">Contact us</a></li>
+          <li><a href="#">Follow us on Twitter</a></li>
+          <li><a href="#">RSS</a></li>
+        </ul>
+      </footer>
+    </main>
+  </body>
 </html>
