--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
         </div>
         <div id="right-head">
             <h1>Adam Duff</h1>
-            <h3>Front-End Developer</h1>
+            <h3>Front-End Developer</h3>
         </div>
     </header>
 
