--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <nav>
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="#about-anchor">
-                    <button class="menu-button">About</button>
-                </a>
+
+                <button class="menu-button"><a href="#about-anchor">About</a></button>
+
             </li>
             <li class="menu-item">
                 <a href="#projects-anchor">
