--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <form action="post">
                 <div class="form-section">
                     <div class="label">
-                        <label for="username">Name:</label>
+                        Name:
                     </div>
                     <div class="form-item">
                         <input type="text" name="username" placeholder="Your Name">
