--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="form-section">
                     <div class="label">
-                        <label for="email">E-mail Address:</label>
+                        E-mail Address:
                     </div>
                     <div class="form-item">
                         <input type="email" placeholder="E-mail Address" name="email">
@@ -137,7 +137,7 @@
                 </div>
                 <div class="form-section">
                     <div class="label">
-                        <label for="message">Message</label>
+                        Message:
                     </div>
                     <div class="form-item">
                         <textarea placeholder="Message" name="message" rows="3" cols="3"></textarea>
