--- a/index.html
+++ b/index.html
@@ -86,30 +86,31 @@
         <section id="projects">
             <h2 id="projects-anchor">Projects</h2>
             <p>Below are a few projects I have completed:</p>
-            <div class="project-item" onclick="window.open('http://aduff.org/Projects/Patatap')">
-
-                <img src="img/patatap.png" class="project-image" alt="Patatap">
-                <h4 class="project-text">PataTap</h4>
-            </div>
-            <div class="project-item" onclick="window.open('http://aduff.org/Projects/ColorGame/colorgame.html')">
-                <img src="img/color-game.png" class="project-image" alt="Color Game">
-                <h4 class="project-text">Color Game</h4>
-            </div>
-            <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/KRKOdb/')">
-                <img src="img/quote-gen.png" class="project-image" alt="Random Quote Generator">
-                <h4 class="project-text">Random Quote Generator</h4>
-            </div>
-            <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/vjNEwZ/')">
-                <img src="img/twitch-stream.png" class="project-image" alt="Twitch Streamer">
-                <h4 class="project-text">Twitch Streamer Online Status</h4>
-            </div>
-            <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/dePEze/')">
-                <img src="img/weather.png" class="project-image" alt="Weather App">
-                <h4 class="project-text">Weather App</h4>
-            </div>
-            <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/zjGjMx/')">
-                <img src="img/wiki-search.png" class="project-image" alt="Wikipedia Search">
-                <h4 class="project-text">Wikipedia Search</h4>
+            <div id="projects-container">
+                <div class="project-item" onclick="window.open('http://aduff.org/Projects/Patatap')">
+                    <img src="img/patatap.png" class="project-image" alt="Patatap">
+                    <h4 class="project-text">PataTap</h4>
+                </div>
+                <div class="project-item" onclick="window.open('http://aduff.org/Projects/ColorGame/colorgame.html')">
+                    <img src="img/color-game.png" class="project-image" alt="Color Game">
+                    <h4 class="project-text">Color Game</h4>
+                </div>
+                <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/KRKOdb/')">
+                    <img src="img/quote-gen.png" class="project-image" alt="Random Quote Generator">
+                    <h4 class="project-text">Random Quote Generator</h4>
+                </div>
+                <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/vjNEwZ/')">
+                    <img src="img/twitch-stream.png" class="project-image" alt="Twitch Streamer">
+                    <h4 class="project-text">Twitch Streamer Online Status</h4>
+                </div>
+                <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/dePEze/')">
+                    <img src="img/weather.png" class="project-image" alt="Weather App">
+                    <h4 class="project-text">Weather App</h4>
+                </div>
+                <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/zjGjMx/')">
+                    <img src="img/wiki-search.png" class="project-image" alt="Wikipedia Search">
+                    <h4 class="project-text">Wikipedia Search</h4>
+                </div>
             </div>
         </section>
         <div class="divider"></div>
