--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
     <div id="contents">
 
         <section id="about-section">
+            <h1 id="abouto-anchor">About Me</h1>
             <img src="img/aduff.jpg" id="profile" alt="profile picture">
-            <p id="about-anchor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at accumsan sapien. Sed dignissim, mi vitae ullamcorper
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at accumsan sapien. Sed dignissim, mi vitae ullamcorper
                 aliquam, tellus tortor facilisis sem, sit amet convallis ligula lacus vitae massa. Nulla eget metus iaculis,
                 volutpat urna vitae, ultricies sem. Duis commodo varius molestie. Pellentesque habitant morbi tristique senectus
                 et netus et malesuada fames ac turpis egestas. Donec posuere convallis eros, ut rutrum nisi cursus vel. Morbi
