--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="contents">
 
         <section id="about-section">
-            <h1 id="abouto-anchor">About Me</h1>
+            <h1 id="about-anchor">About Me</h1>
             <img src="img/aduff.jpg" id="profile" alt="profile picture">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at accumsan sapien. Sed dignissim, mi vitae ullamcorper
                 aliquam, tellus tortor facilisis sem, sit amet convallis ligula lacus vitae massa. Nulla eget metus iaculis,
