--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     <nav>
         <ul class="menu-list">
             <li class="menu-item">
-
-                <button class="menu-button"><a href="#about-anchor">About</a></button>
-
-            </li>
-            <li class="menu-item">
-                <a href="#projects-anchor">
-                    <button class="menu-button">Projects</button>
+                <a href="#about-anchor" class="menu-button">
+                    About        
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#contact-anchor">
-                    <button class="menu-button">Contact</button>
+                <a href="#projects-anchor" class="menu-button">
+                    Projects        
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#contact-anchor" class="menu-button">
+                    Contact        
                 </a>
             </li>
         </ul>
