--- a/index.html
+++ b/index.html
@@ -154,15 +154,9 @@
                 Copyright &copy; Adam Duff 2018.
             </div>
             <div id="social">
-                <a href="https://www.facebook.com/FikoReborn">
-                    <i class="fab fa-facebook-square"></i>
-                </a>
-                <a href="https://twitter.com/FikoReborn">
-                    <i class="fab fa-twitter-square"></i>
-                </a>
-                <a href="https://github.com/FikoReborn">
-                    <i class="fab fa-github-square"></i>
-                </a>
+                <a href="https://www.facebook.com/FikoReborn"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://twitter.com/FikoReborn"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://github.com/FikoReborn"><i class="fab fa-github-square"></i></a>
             </div>
         </footer>
 
