--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
-    <title>Document</title>
+    <title>Adam's Portfolio</title>
 </head>
 
 <body>
@@ -120,6 +120,7 @@
 
         <section id="contact">
             <h2 id="contact-anchor">Contact Me</h2>
+            <!-- Will update form when I have a backend solution -->
             <form action="post">
                 <div class="form-section">
                     <div class="label">
