--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                 </div>
                 <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/KRKOdb/')">
                     <img src="img/quote-gen.png" class="project-image" alt="Random Quote Generator">
-                    <h4 class="project-text">Random Quote<br> Generator</h4>
+                    <h4 class="project-text">Random Quote Generator</h4>
                 </div>
                 <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/vjNEwZ/')">
                     <img src="img/twitch-stream.png" class="project-image" alt="Twitch Streamer">
-                    <h4 class="project-text">Twitch Streamer<br> Online Status</h4>
+                    <h4 class="project-text">Twitch Streamer Online Status</h4>
                 </div>
                 <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/dePEze/')">
                     <img src="img/weather.png" class="project-image" alt="Weather App">
@@ -110,7 +110,7 @@
                 </div>
                 <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/zjGjMx/')">
                     <img src="img/wiki-search.png" class="project-image" alt="Wikipedia Search">
-                    <h4 class="project-text">Wikipedia<br> Search</h4>
+                    <h4 class="project-text">Wikipedia Search</h4>
                 </div>
             </div>
         </section>
