--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
     <header>
-        <div id="left-head">
+        <div class="left-head">
             <img src="img/udacity.png" alt="logo">
         </div>
-        <div id="right-head">
+        <div class="right-head">
             <h1>Adam Duff</h1>
             <h3>Front-End Developer</h3>
         </div>
@@ -43,18 +43,18 @@
                 </a>
             </li>
         </ul>
-        <span id="hamburger">
+        <span class="hamburger">
             <i class="fas fa-bars"></i>
         </span>
     </nav>
 
     <!-- **MAIN CONTENT STARTS HERE**  -->
 
-    <div id="contents">
+    <div class="contents">
 
-        <section id="about-section">
+        <section class="about-section">
             <h2 id="about-anchor">About Me</h2>
-            <img src="img/aduff.jpg" id="profile" alt="profile picture">
+            <img src="img/aduff.jpg" class="profile" alt="profile picture">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at accumsan sapien. Sed dignissim, mi vitae ullamcorper
                 aliquam, tellus tortor facilisis sem, sit amet convallis ligula lacus vitae massa. Nulla eget metus iaculis,
                 volutpat urna vitae, ultricies sem. Duis commodo varius molestie. Pellentesque habitant morbi tristique senectus
@@ -84,10 +84,10 @@
         <div class="divider"></div>
         <!-- **PROJECT SECTION**  -->
 
-        <section id="projects">
+        <section class="projects">
             <h2 id="projects-anchor">Projects</h2>
             <p>Below are a few projects I have completed:</p>
-            <div id="projects-container">
+            <div class="projects-container">
                 <div class="project-item" onclick="window.open('http://aduff.org/Projects/Patatap')">
                     <img src="img/patatap.png" class="project-image" alt="Patatap">
                     <h4 class="project-text">PataTap</h4>
@@ -118,7 +118,7 @@
 
         <!-- **CONTACT SECTION**  -->
 
-        <section id="contact">
+        <section class="contact">
             <h2 id="contact-anchor">Contact Me</h2>
             <!-- Will update form when I have a backend solution -->
             <form action="post">
@@ -146,15 +146,15 @@
                         <textarea placeholder="Message" name="message" rows="3" cols="3"></textarea>
                     </div>
                 </div>
-                <input type="submit" id="submit-button">
+                <input type="submit" class="submit-button">
             </form>
         </section>
 
         <footer>
-            <div id="copyright">
+            <div class="copyright">
                 Copyright &copy; Adam Duff 2018.
             </div>
-            <div id="social">
+            <div class="social">
                 <a href="https://www.facebook.com/FikoReborn" target="_blank"><i class="fab fa-facebook-square"></i></a>
                 <a href="https://twitter.com/FikoReborn" target="_blank"><i class="fab fa-twitter-square"></i></a>
                 <a href="https://github.com/FikoReborn" target="_blank"><i class="fab fa-github-square"></i></a>
