--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <img src="img/udacity.png" alt="logo">
         </div>
         <div class="right-head">
-            <h1>Adam Duff</h1>
-            <h3>Front-End Developer</h3>
+            <h1 class="site-title-text">Adam Duff</h1>
+            <h3 class="sub-title-text">Front-End Developer</h3>
         </div>
     </header>
 
