--- a/index.html
+++ b/index.html
@@ -88,29 +88,30 @@
             <h2 id="projects-anchor">Projects</h2>
             <p>Below are a few projects I have completed:</p>
             <div class="projects-container">
-                <div class="project-item" onclick="window.open('http://aduff.org/Projects/Patatap')">
-                    <img src="img/patatap.png" class="project-image" alt="Patatap">
-                    <h4 class="project-text">PataTap</h4>
+                <div class="project-item">
+      
+                    <img src="http://aduff.org/Images/patatap.png" class="project-image" alt="Patatap">
+                    <a href="http://aduff.org/Projects/PataTap" class="project-text" target="_blank"><h4>PataTap<br>(Keyboard Required)</h4></a>
                 </div>
-                <div class="project-item" onclick="window.open('http://aduff.org/Projects/ColorGame/colorgame.html')">
-                    <img src="img/color-game.png" class="project-image" alt="Color Game">
-                    <h4 class="project-text">Color Game</h4>
+                <div class="project-item">
+                    <img src="http://aduff.org/Images/color-game.png" class="project-image" alt="Color Game">
+                    <a href="http://aduff.org/Projects/ColorGame/colorgame.html" class="project-text" target="_blank"><h4>Color Game</h4></a>
                 </div>
-                <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/KRKOdb/')">
-                    <img src="img/quote-gen.png" class="project-image" alt="Random Quote Generator">
-                    <h4 class="project-text">Random Quote<br> Generator</h4>
+                <div class="project-item">
+                    <img src="http://aduff.org/Images/quote-gen.png" class="project-image" alt="Random Quote Generator">
+                    <a href="https://codepen.io/FikoReborn/full/KRKOdb/" class="project-text" target="_blank"><h4>Random Quote<br>Generator</h4></a>
                 </div>
-                <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/vjNEwZ/')">
-                    <img src="img/twitch-stream.png" class="project-image" alt="Twitch Streamer">
-                    <h4 class="project-text">Twitch Streamer<br> Online Status</h4>
+                <div class="project-item">
+                    <img src="http://aduff.org/Images/twitch-stream.png" class="project-image" alt="Twitch Streamer">
+                    <a href="https://codepen.io/FikoReborn/full/vjNEwZ/" class="project-text" target="_blank"><h4>Twitch Streamer<br>Online Status</h4></a>
                 </div>
-                <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/dePEze/')">
-                    <img src="img/weather.png" class="project-image" alt="Weather App">
-                    <h4 class="project-text">Weather App</h4>
+                <div class="project-item">
+                    <img src="http://aduff.org/Images/weather.png" class="project-image" alt="Weather App">
+                    <a href="https://codepen.io/FikoReborn/full/dePEze/" class="project-text" target="_blank"><h4>Weather App</h4></a>
                 </div>
-                <div class="project-item" onclick="window.open('https://codepen.io/FikoReborn/full/zjGjMx/')">
-                    <img src="img/wiki-search.png" class="project-image" alt="Wikipedia Search">
-                    <h4 class="project-text">Wikipedia<br> Search</h4>
+                <div class="project-item">
+                    <img src="http://aduff.org/Images/wiki-search.png" class="project-image" alt="Wikipedia Search">
+                    <a href="https://codepen.io/FikoReborn/full/zjGjMx/" class="project-text" target="_blank"><h4>Wikipedia<br>Search</h4></a>
                 </div>
             </div>
         </section>
