--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="project-item">
                     <img src="http://aduff.org/Images/color-game.png" class="project-image" alt="Color Game">
-                    <a href="http://aduff.org/Projects/ColorGame/colorgame.html" class="project-text" target="_blank"><h4>Color Game</h4></a>
+                    <a href="http://aduff.org/Projects/ColorGame/colorgame.html" class="project-text" target="_blank"><h4>Color<br>Game</h4></a>
                 </div>
                 <div class="project-item">
                     <img src="http://aduff.org/Images/quote-gen.png" class="project-image" alt="Random Quote Generator">
@@ -107,7 +107,7 @@
                 </div>
                 <div class="project-item">
                     <img src="http://aduff.org/Images/weather.png" class="project-image" alt="Weather App">
-                    <a href="https://codepen.io/FikoReborn/full/dePEze/" class="project-text" target="_blank"><h4>Weather App</h4></a>
+                    <a href="https://codepen.io/FikoReborn/full/dePEze/" class="project-text" target="_blank"><h4>Weather<br>App</h4></a>
                 </div>
                 <div class="project-item">
                     <img src="http://aduff.org/Images/wiki-search.png" class="project-image" alt="Wikipedia Search">
