--- a/index.html
+++ b/index.html
@@ -73,37 +73,37 @@
             <div class="projects-container">
                 <div class="project-item">
 
-                    <img src="http://aduff.org/Images/patatap.png" class="project-image" alt="Patatap">
+                    <img src="img/patatap.png" class="project-image" alt="Patatap">
                     <a href="http://aduff.org/Projects/PataTap" class="project-text" target="_blank">
                         <h4>PataTap<br>(Keyboard Required)</h4>
                     </a>
                 </div>
                 <div class="project-item">
-                    <img src="http://aduff.org/Images/color-game.png" class="project-image" alt="Color Game">
+                    <img src="img/color-game.png" class="project-image" alt="Color Game">
                     <a href="http://aduff.org/Projects/ColorGame/colorgame.html" class="project-text" target="_blank">
                         <h4>Color<br>Game</h4>
                     </a>
                 </div>
                 <div class="project-item">
-                    <img src="http://aduff.org/Images/quote-gen.png" class="project-image" alt="Random Quote Generator">
+                    <img src="img/quote-gen.png" class="project-image" alt="Random Quote Generator">
                     <a href="https://codepen.io/FikoReborn/full/KRKOdb/" class="project-text" target="_blank">
                         <h4>Random Quote<br>Generator</h4>
                     </a>
                 </div>
                 <div class="project-item">
-                    <img src="http://aduff.org/Images/twitch-stream.png" class="project-image" alt="Twitch Streamer">
+                    <img src="img/twitch-stream.png" class="project-image" alt="Twitch Streamer">
                     <a href="https://codepen.io/FikoReborn/full/vjNEwZ/" class="project-text" target="_blank">
                         <h4>Twitch Streamer<br>Online Status</h4>
                     </a>
                 </div>
                 <div class="project-item">
-                    <img src="http://aduff.org/Images/weather.png" class="project-image" alt="Weather App">
+                    <img src="img/weather.png" class="project-image" alt="Weather App">
                     <a href="https://codepen.io/FikoReborn/full/dePEze/" class="project-text" target="_blank">
                         <h4>Weather App</h4>
                     </a>
                 </div>
                 <div class="project-item">
-                    <img src="http://aduff.org/Images/wiki-search.png" class="project-image" alt="Wikipedia Search">
+                    <img src="img/wiki-search.png" class="project-image" alt="Wikipedia Search">
                     <a href="https://codepen.io/FikoReborn/full/zjGjMx/" class="project-text" target="_blank">
                         <h4>Wikipedia<br>Search</h4>
                     </a>
