--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                         <h4>Wikipedia<br>Search</h4>
                     </a>
                 </div>
+                <div class="project-item">
+                    <img src="img/todolist.png" class="project-image" alt="Simple To-Do List">
+                    <a href="http://aduff.org/Projects/TodoList" class="project-text" target="_blank">
+                        <h4>Simple To-Do<br>List</h4>
+                    </a>
+                </div>
             </div>
         </section>
         <div class="divider"></div>
