--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <section class="about-section">
             <h2 id="about-anchor">About Me</h2>
             <img src="img/aduff.jpg" class="profile" alt="profile picture">
-            <p>My name is Adam Duff, and I am an up and coming front-end web developer. I spent much of middle school years (some 20 years ago) designing my own websites, and somewhere along the way, I stopped doing it. So, here I am today, more intrigued by web development than ever!</p>
+            <p>My name is Adam Duff, an up and coming front-end web developer currently residing in Catskill, a small town in upstate New York. I learned much of the basics of HTML, CSS, and JavaScript as a teenager, and here I am today, with plans of making it into a career.</p>
 
-            <p>It truly is amazing, looking back, at how much things have changed. Back in "the day," we only had to account for desktop sizes and cross-browser compatibility. These days, everyone is viewing your website on different devices, with many different screen sizes, and truly has morphed the way we go about website design and development.</p>
+            <p>It truly is amazing, looking back, at how much things have changed. Back in the 90's we only had to account for desktop sizes and cross-browser compatibility. These days, everyone is viewing websites on different devices, with many different screen sizes, and it truly has morphed the way we go about website design and development.</p>
 
-            <p>My intent with this website is just a spot to share the projects I am working on, and I may add a blog/updates page at some point, if I am able to justify it, just to share my thoughts. For now, this is pretty barebones, and knowing me, will see many evolutions.</p>
+            <p>My intent with this website is just a spot to share the projects I am working on, and I may add a blog/updates page at some point, if I am able to justify it with regular updates, just to share my thoughts. For now, this is a pretty barebones outlet for me to share my work, but knowing me, it will see many evolutions.</p>
 
-            <p>My end goal is to obtain a career in web development. I have been studying on and off over the last year, and I can safely say I have not only refreshed my memory on how all this stuff works, I am now more knowledgable on the subject than I have ever been before. I was lucky enough to obtain the Grow with Google Scholarship through Udacity, and I am working hard on completing that. From there, who knows what is in store! It is a journey and all journeys start somewhere. For now, it starts here.</p>
+            <p>My end goal is to obtain a career in web development. I have been making great strides over the last year, and I can safely say I have not only refreshed my memory on HTML, CSS and JavaScript, but I am now more knowledgable on the subject than I have ever been before. It is all very exciting! I was lucky enough to obtain the Grow with Google Scholarship through Udacity, and I am working hard on completing that. From there, who knows what is in store! It is a journey and all journeys start somewhere. For now, it starts here!</p>
         </section>
         <div class="divider"></div>
         <!-- **PROJECT SECTION**  -->
