--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <p>My intent with this website is just a spot to share the projects I am working on, and I may add a blog/updates page at some point, if I am able to justify it with regular updates, just to share my thoughts. For now, this is a pretty barebones outlet for me to share my work, but knowing me, it will see many evolutions.</p>
 
-            <p>My end goal is to obtain a career in web development. I have been making great strides over the last year, and I can safely say I have not only refreshed my memory on HTML, CSS and JavaScript, but I am now more knowledgable on the subject than I have ever been before. It is all very exciting! I was lucky enough to obtain the Grow with Google Scholarship through Udacity, and I am working hard on completing that. From there, who knows what is in store! It is a journey and all journeys start somewhere. For now, it starts here!</p>
+            <p>My end goal is to obtain a career in web development. I have been making great strides over the last year, and I can safely say I have not only refreshed my memory on HTML, CSS and JavaScript, but I am now more knowledgable on the subject than I have ever been before. It is all very exciting! I was lucky enough to obtain the Grow with Google Scholarship through Udacity for the Front-End Development Nanodegree, and I am working hard on completing that, learning all I can on the way. From there, who knows what is in store! It is a journey and all journeys start somewhere. For now, it starts here!</p>
         </section>
         <div class="divider"></div>
         <!-- **PROJECT SECTION**  -->
