--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- test -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+    <script src="js/project-feed.js"></script>
     <title>Adam's Portfolio</title>
 </head>
 
@@ -70,7 +71,12 @@
         <section class="projects">
             <h2 id="projects-anchor">Projects</h2>
             <p>Below are a few projects I have completed:</p>
+
             <div class="projects-container">
+                
+            </div>
+
+            <!-- <div class="projects-container">
                 <div class="project-item">
 
                     <img src="img/patatap.png" class="project-image" alt="Patatap">
@@ -114,7 +120,7 @@
                         <h4>Simple To-Do<br>List</h4>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </section>
         <div class="divider"></div>
 
