refactor: Added titles to social icons on bottom of page

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                 Copyright &copy; Adam M. Duff 2018.
             </div>
             <div class="social">
-                <a href="https://www.facebook.com/FikoReborn" target="_blank"><i class="fab fa-facebook-square social-icons"></i></a>
-                <a href="https://twitter.com/FikoReborn" target="_blank"><i class="fab fa-twitter-square social-icons"></i></a>
-                <a href="https://github.com/FikoReborn" target="_blank"><i class="fab fa-github-square social-icons"></i></a>
+                <a href="https://www.facebook.com/FikoReborn" target="_blank"><i class="fab fa-facebook-square social-icons" title="Facebook"></i></a>
+                <a href="https://twitter.com/FikoReborn" target="_blank"><i class="fab fa-twitter-square social-icons" title="Twitter"></i></a>
+                <a href="https://github.com/FikoReborn" target="_blank"><i class="fab fa-github-square social-icons" title="GitHub"></i></a>
             </div>
         </footer>
 
