refactor: Website now fully a11y friendly

--- a/index.html
+++ b/index.html
@@ -86,26 +86,26 @@
             <form action="post">
                 <div class="form-section">
                     <div class="label">
-                        Name:
+                        <label for="username">Name:</label>
                     </div>
                     <div class="form-item">
-                        <input type="text" name="username" placeholder="Your Name">
+                        <input type="text" id="username" name="username" placeholder="Your Name">
                     </div>
                 </div>
                 <div class="form-section">
                     <div class="label">
-                        E-mail Address:
+                        <label for="email">E-mail Address:</label>
                     </div>
                     <div class="form-item">
-                        <input type="email" placeholder="E-mail Address" name="email">
+                        <input type="email" placeholder="E-mail Address" id="email" name="email">
                     </div>
                 </div>
                 <div class="form-section">
                     <div class="label">
-                        Message:
+                        <label for="message">Message:</label>
                     </div>
                     <div class="form-item">
-                        <textarea placeholder="Message" name="message" rows="3" cols="3"></textarea>
+                        <textarea placeholder="Message" name="message" rows="3" cols="3" id="message"></textarea>
                     </div>
                 </div>
                 <input type="submit" class="submit-button">
