feat: Changed logo image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="left-head">
-            <img src="img/udacity.png" alt="logo" class="logo">
+            <img src="img/data.png" alt="logo" class="logo">
         </div>
         <div class="right-head">
             <h1 class="site-title-text">Adam Duff</h1>
