feat: Updated website intro

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <section class="about-section">
             <h2 id="about-anchor">About Me</h2>
             <img src="img/aduff.jpg" class="profile" alt="profile picture">
-            <p>My name is Adam Duff, an up and coming front-end web developer currently residing in Catskill, a small town in upstate New York. I learned much of the basics of HTML, CSS, and JavaScript as a teenager, and here I am today, with plans of making it into a career.</p>
-
             <p>It truly is amazing, looking back, at how much things have changed. Back in the 90's we only had to account for desktop sizes and cross-browser compatibility. These days, everyone is viewing websites on different devices, with many different screen sizes, and it truly has morphed the way we go about website design and development.</p>
 
-            <p>My intent with this website is just a spot to share the projects I am working on, and I may add a blog/updates page at some point, if I am able to justify it with regular updates, just to share my thoughts. For now, this is a pretty barebones outlet for me to share my work, but knowing me, it will see many evolutions.</p>
+            <p>I may have veered off track there a bit. My name is Adam Duff, currently residing in Catskill, a small town in upstate New York. I just finished the Udacity Front-end Nanodegree late last year, although I have been switching gears a bit toward the IT side of things as I am working at getting my CompTIA A+ Certification. I will move on from there to Network+ and Security+ as time and funding (coming out of my own pocket) allows. </p>
 
-            <p>My end goal is to obtain a career in web development. I have been making great strides over the last year, and I can safely say I have not only refreshed my memory on HTML, CSS and JavaScript, but I am now more knowledgable on the subject than I have ever been before. It is all very exciting! I was lucky enough to obtain the Grow with Google Scholarship through Udacity for the Front-End Development Nanodegree, and I am working hard on completing that, learning all I can on the way. From there, who knows what is in store! It is a journey and all journeys start somewhere. For now, it starts here!</p>
+            <p>I have not updated this website in a while as I have spent the last few months studying, but for now you can see all my previous projects on here. I do plan on adding at least one more project in the relatively near future.</p>
+
+            <p>There will be more personal projects after that, but my progress has slowed down significantly while I study and attain these certifications. I seem to becoming more of a jack of all trades these days with both web developement experience as well as IT certifications!</p>
         </section>
         <div class="divider"></div>
         <!-- **PROJECT SECTION**  -->
