feat: Updated website intro

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <p>I have not updated this website in a while as I have spent the last few months studying, but for now you can see all my previous projects on here. I do plan on adding at least one more project in the relatively near future.</p>
 
-            <p>There will be more personal projects after that, but my progress has slowed down significantly while I study and attain these certifications. I seem to becoming more of a jack of all trades these days with both web developement experience as well as IT certifications!</p>
+            <p>There will be more personal projects after that, but my progress has slowed down significantly while I study and attain these certifications. I seem to becoming more of a jack of all trades these days with both web development experience as well as IT certifications!</p>
         </section>
         <div class="divider"></div>
         <!-- **PROJECT SECTION**  -->
