feat: Added text in contact section noting it is not functional

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- **CONTACT SECTION**  -->
 
         <section class="contact">
-            <h2 id="contact-anchor">Contact Me</h2>
+            <h2 id="contact-anchor">Contact Me (non-functional for now)</h2>
             <!-- Will update form when I have a backend solution -->
             <form action="post">
                 <div class="form-section">
