feat: Updated bio

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
             <img src="img/aduff.jpg" class="profile" alt="profile picture">
             <p>It truly is amazing, looking back, at how much things have changed. Back in the 90's we only had to account for desktop sizes and cross-browser compatibility. These days, everyone is viewing websites on different devices, with many different screen sizes, and it truly has morphed the way we go about website design and development.</p>
 
-            <p>I may have veered off track there a bit. My name is Adam Duff, currently residing in Catskill, a small town in upstate New York. I just finished the Udacity Front-end Nanodegree late last year, although I have been switching gears a bit toward the IT side of things as I am working at getting my CompTIA A+ Certification. I will move on from there to Network+ and Security+ as time and funding (coming out of my own pocket) allows. </p>
-
-            <p>I have not updated this website in a while as I have spent the last few months studying, but for now you can see all my previous projects on here. I do plan on adding at least one more project in the relatively near future.</p>
-
-            <p>There will be more personal projects after that, but my progress has slowed down significantly while I study and attain these certifications. I seem to becoming more of a jack of all trades these days with both web development experience as well as IT certifications!</p>
+            <p>I may have veered off track there a bit. My name is Adam Duff, currently residing in Catskill, a small town in upstate New York. I just finished the Udacity Front-end Nanodegree late last year. I am currently juggling my portfolio, while working full-time in a customer service role and raising a family, as well as trying to introduce myself to new technologies most of the time. That said, while I try to keep this site active, it does not always work out that way.</p>
         </section>
         <div class="divider"></div>
         <!-- **PROJECT SECTION**  -->
